--- a/Herbavi/src/styles.css
+++ b/Herbavi/src/styles.css
@@ -6,7 +6,7 @@ body {
     font-family: Roboto, "Helvetica Neue", sans-serif;
     height: 100%;
     overflow: hidden;
-    background-color: #EDADC7;
+    background-color: #81C3D7;
 }
      
 
