--- a/Herbavi/src/app/componentes/registro/registro.component.css
+++ b/Herbavi/src/app/componentes/registro/registro.component.css
@@ -2,7 +2,7 @@
 .carta.web-landscape {
     width: 60%;
     margin: 0 auto;
-    margin-top: 5%;
+    margin-top: 3%;
     background-color: #DFE2CF;
     padding-top: 10px;
     padding-bottom: 10px;
@@ -157,6 +157,7 @@
 
 .carta.smartphone-portrait label {
     font-family: 'Times New Roman';
+    font-size: 10px;
 }
 
 .carta.smartphone-portrait .contenedor-boton {
@@ -206,6 +207,7 @@
 
 .carta.smartphone-landscape label {
     font-family: 'Times New Roman';
+    font-size: 12px;
 }
 
 .carta.smartphone-landscape .contenedor-boton {
