--- a/Herbavi/src/app/componentes/home/home.component.html
+++ b/Herbavi/src/app/componentes/home/home.component.html
@@ -17,7 +17,7 @@
             </button>
             <span class="spacer"></span>
             <button (click)="carrito()" mat-icon-button class="favorite-icon" matTooltip="Carrito de compras" matTooltipHideDelay="200">
-                <mat-icon matBadge="15" matBadgeColor="warn">local_grocery_store</mat-icon>
+                <mat-icon>local_grocery_store</mat-icon>
             </button>
             <button mat-icon-button matTooltip="Usuario" matTooltipHideDelay="200" class="example-icon">
                 <mat-icon>person</mat-icon>
